PR/46077: M. Nunberg: Stat should not fial on connecting socket.